Get Back To MOC Commit

--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@
 
     <nav id="navbar">
         <div class="nav-content">
-            <div class="logo">cv portfolio</div>
+            <div class="logo">MOC</div>
             <div class="nav-links">
                 <a href="#about">About</a>
                 <a href="#skills">Skills</a>
